--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bluebird": "^2.9.3",
     "express": "^4.11.1",
     "redis": "^0.12.1",
+    "request": "^2.51.0",
     "socket.io": "^1.3.2",
     "socket.io-client": "^1.3.2",
     "struct": "0.0.8"
