--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "binary": "^0.3.0",
     "bluebird": "^2.9.3",
+    "cron": "^1.0.6",
     "express": "^4.11.1",
     "redis": "^0.12.1",
     "request": "^2.51.0",
